[WPE] Fix build after 301229 https://bugs.webkit.org/show_bug.cgi?id=300684

Reviewed by Michael Catanzaro.

WPE didn't have the WebExtensions code enabled. Enabling it
reveals many bugs that assumed Gtk would always be present.
We can move a lot of code to GTK specific files and leave non-GTK parts
available for WPE.

This also disables the action-parsing test on WPE, since that
test creates a PNG image and WPE doesn't have any libraries that
support doing that.

* Source/WebCore/SourcesGTK.txt:
* Source/WebCore/SourcesWPE.txt:
* Source/WebCore/platform/graphics/Icon.cpp:
* Source/WebCore/platform/graphics/Icon.h:
* Source/WebCore/platform/graphics/glib/IconGLib.cpp: Renamed from Source/WebCore/platform/graphics/gtk/IconGtk.cpp.
* Source/WebKit/PlatformWPE.cmake:
* Source/WebKit/Shared/API/APIData.h:
* Source/WebKit/Shared/Extensions/wpe/WebExtensionUtilitiesWPE.cpp:
(WebKit::availableScreenScales):
* Source/WebKit/SourcesGTK.txt:
* Source/WebKit/SourcesWPE.txt:
* Source/WebKit/UIProcess/Extensions/glib/WebExtensionGLib.cpp: Copied from Source/WebKit/UIProcess/Extensions/gtk/WebExtensionGtk.cpp.
* Source/WebKit/UIProcess/Extensions/gtk/WebExtensionGTK.cpp: Added.
(WebKit::WebExtension::iconForPath):
* Source/WebKit/UIProcess/Extensions/wpe/WebExtensionWPE.cpp: Added.
(WebKit::WebExtension::iconForPath):
* Source/cmake/OptionsWPE.cmake:
* Tools/TestWebKitAPI/Tests/WebKitGLib/TestWebKitWebExtension.cpp:
(beforeAll):
* Tools/TestWebKitAPI/glib/CMakeLists.txt:
* Tools/TestWebKitAPI/glib/PlatformGTK.cmake:
* Tools/TestWebKitAPI/glib/WebKitGLib/gtk/WebExtensionUtilities.cpp: Renamed from Tools/TestWebKitAPI/glib/WebKitGLib/WebExtensionUtilities.cpp.

Canonical link: https://commits.webkit.org/301906@main